concord_macros/tests/dsl/fail/fail_codec_spec_missing_type_arg.rs
use concord_macros::api;

api! {
    client CodecSpecMissingTypeArg {
        base "https://example.com"
    }

    GET Ping
        path ["ping"]
        -> Json<>
}

fn main() {}
